Scene 클래스 추가 , Object 클래스 생성자 수정

--- a/aquanautics/aquanautics.vcxproj.filters
+++ b/aquanautics/aquanautics.vcxproj.filters
@@ -19,11 +19,13 @@
     <ClInclude Include="Object.h">
       <Filter>FrameWork\Node</Filter>
     </ClInclude>
+    <ClInclude Include="Scene.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Object.cpp">
       <Filter>FrameWork\Node</Filter>
     </ClCompile>
+    <ClCompile Include="Scene.cpp" />
   </ItemGroup>
 </Project>
