--- a/aquanautics/aquanautics.vcxproj.filters
+++ b/aquanautics/aquanautics.vcxproj.filters
@@ -37,7 +37,10 @@
     <ClInclude Include="Texture.h">
       <Filter>FrameWork\Node</Filter>
     </ClInclude>
-    <ClInclude Include="Application.h" />
+    <ClInclude Include="Application.h">
+      <Filter>FrameWork\Node2</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -59,6 +62,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>FrameWork\Node</Filter>
     </ClCompile>
-    <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Application.cpp">
+      <Filter>FrameWork\Node2</Filter>
+    </ClCompile>
+    <ClCompile Include="Input.cpp" />
   </ItemGroup>
 </Project>
