--- a/aquanautics/aquanautics.vcxproj
+++ b/aquanautics/aquanautics.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Director.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Intro.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ResourceMgr.h" />
@@ -164,6 +165,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Director.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Intro.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceMgr.cpp" />
