WinMain 추가 및 구현

--- a/aquanautics/aquanautics.vcxproj.filters
+++ b/aquanautics/aquanautics.vcxproj.filters
@@ -85,5 +85,6 @@
     <ClCompile Include="Intro.cpp">
       <Filter>Game\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
 </Project>
