GameTime 클래스 추가 및 구현 , Animation 클래스 추가 및 구현, MainMenu 씬 추가

--- a/aquanautics/aquanautics.vcxproj.filters
+++ b/aquanautics/aquanautics.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="BackGround.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="AnimationSprite.h" />
+    <ClInclude Include="GameTime.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -104,5 +107,8 @@
     <ClCompile Include="BackGround.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="AnimationSprite.cpp" />
+    <ClCompile Include="GameTime.cpp" />
   </ItemGroup>
 </Project>
