--- a/aquanautics/aquanautics.vcxproj
+++ b/aquanautics/aquanautics.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="AnimationSprite.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="BackGround.h" />
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="BulletMgr.h" />
     <ClInclude Include="Director.h" />
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="Input.h" />
@@ -166,6 +168,8 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SingleTon.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Stage1.h" />
+    <ClInclude Include="Stage2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Texture.h" />
   </ItemGroup>
@@ -173,6 +177,8 @@
     <ClCompile Include="AnimationSprite.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BackGround.cpp" />
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="BulletMgr.cpp" />
     <ClCompile Include="Director.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="Input.cpp" />
@@ -185,6 +191,8 @@
     <ClCompile Include="ResourceMgr.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Stage1.cpp" />
+    <ClCompile Include="Stage2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
