--- a/aquanautics/aquanautics.vcxproj
+++ b/aquanautics/aquanautics.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemMgr.h" />
     <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="Misille.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerMgr.h" />
@@ -181,6 +182,8 @@
     <ClInclude Include="Stage1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Torpedo.h" />
+    <ClInclude Include="TripleBullet.h" />
     <ClInclude Include="Urak.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
@@ -201,6 +204,7 @@
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemMgr.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Misille.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerMgr.cpp" />
@@ -215,6 +219,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Torpedo.cpp" />
+    <ClCompile Include="TripleBullet.cpp" />
     <ClCompile Include="Urak.cpp" />
     <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="WinMain.cpp" />
