--- a/aquanautics/aquanautics.vcxproj.filters
+++ b/aquanautics/aquanautics.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Game\Bullet">
       <UniqueIdentifier>{dcce6baf-ad1e-4baa-b41c-6efe359c15e1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Unit\Enemy">
+      <UniqueIdentifier>{d8d00c14-d812-4b7a-991f-384461331b5f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object.h">
@@ -102,9 +105,6 @@
     <ClInclude Include="ResourceMgr.h">
       <Filter>FrameWork\Manager</Filter>
     </ClInclude>
-    <ClInclude Include="Urak.h">
-      <Filter>Game\Unit</Filter>
-    </ClInclude>
     <ClInclude Include="EnemySpawner.h">
       <Filter>Game\Unit</Filter>
     </ClInclude>
@@ -131,6 +131,9 @@
     </ClInclude>
     <ClInclude Include="Misille.h">
       <Filter>Game\Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="Urak.h">
+      <Filter>Game\Unit\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -201,9 +204,6 @@
     <ClCompile Include="ResourceMgr.cpp">
       <Filter>FrameWork\Manager</Filter>
     </ClCompile>
-    <ClCompile Include="Urak.cpp">
-      <Filter>Game\Unit</Filter>
-    </ClCompile>
     <ClCompile Include="EnemySpawner.cpp">
       <Filter>Game\Unit</Filter>
     </ClCompile>
@@ -230,6 +230,9 @@
     </ClCompile>
     <ClCompile Include="Misille.cpp">
       <Filter>Game\Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="Urak.cpp">
+      <Filter>Game\Unit\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
