--- a/aquanautics/aquanautics.vcxproj.filters
+++ b/aquanautics/aquanautics.vcxproj.filters
@@ -147,13 +147,12 @@
     <ClInclude Include="Shark.h">
       <Filter>Game\Unit\Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="Label.h">
-      <Filter>FrameWork\Node2</Filter>
-    </ClInclude>
     <ClInclude Include="Eel.h">
       <Filter>Game\Unit\Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyBullet.h" />
+    <ClInclude Include="EnemyBullet.h">
+      <Filter>Game\Unit\Enemy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Object.cpp">
@@ -256,15 +255,14 @@
     <ClCompile Include="Kraken.cpp">
       <Filter>Game\Unit\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="Shark.cpp">
+    <ClCompile Include="EnemyBullet.cpp">
       <Filter>Game\Unit\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="Label.cpp">
-      <Filter>FrameWork\Node2</Filter>
     </ClCompile>
     <ClCompile Include="Eel.cpp">
       <Filter>Game\Unit\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="EnemyBullet.cpp" />
+    <ClCompile Include="Shark.cpp">
+      <Filter>Game\Unit\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
